# Practice

./: cGPACalc.cpp  cworld.cpp  helloworld.cpp  numCount.cpp  p1.cpp  p2.cpp  p3.cpp  p3_2.cpp  p3_3.cpp  p3_4.cpp
HW/task_1/: commands.sh
HW/task_2/: build.sh  install.sh
HW/task_2/src/: CMakeLists.txt
HW/task_2/src/.cache/clangd/index/: main.cpp.DC557716E0C8C002.idx  subtract.cpp.7DF4CF870EB0DB88.idx  sum.cpp.08D240DB16A16028.idx
HW3/src/: CMakeLists.txt  app  html_writer.cpp  image_browser.cpp  image_browser.html  main  main.cpp  style.css  test.html  test2.html
projects/cfiles/: p1.c  p2.c
projects/cfiles/proj/: main.c
src/: CMakeLists.txt  task_1.cpp  task_2.cpp
test_setup/: a.out  main.cpp
